fdo#44661: No need to update the source range when it's a named range.

Otherwise deleting a sheet that shifts the position of the pivot table
would turn the named range into the raw range that the name references.